@@ -105,6 +105,7 @@ $input-border-radius:           $global-radius !default;
 $input-border:                  solid 1px $border-color !default;
 $input-border-focus:            solid 1px map-get($colors, primary) !default;
 $input-font-size:               1.5rem !default;
+$input-font-color:              $font-color !default;
 $input-padding-y:               1rem !default;
 $input-padding-x:               1rem !default;
 
